--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ table {
 ======================================================================================
 */
 
+
 .row {
 	display: flex;
 	flex-wrap: wrap;
@@ -150,13 +151,33 @@ table {
 	line-height: 40px;
 }
 
+.top-right ul li {
+	display: inline-block;
+	margin-right: 30px;
+	margin-top: 10px;
+}
+
+.footer-left {
+	width: 50%;
+}
+
+.footer-left ul li {
+	display: inline-block;
+	margin-left: 30px;
+}
+
 .footer-right {
 	width: 50%;
 	text-align: right;
 }
 
+.footer-right ul li {
+	display: inline-block;
+	margin-right: 30px;
+}
+
 .space-top-middle {
-	height: 152px;
+	height: 140px;
 	width: 1080px;
 }
 
@@ -170,17 +191,47 @@ input[type="text"] {
 
 .buttons {
 	margin: 0 auto;
-	text-align: center;
+}
+
+button {
+	height: 27px;
+	border: 1px solid rgba(0,0,0,0.1);
+	border-radius: 2px;
+	background-color: #f5f5f5;
+	color: #444;
+	font-family: arial, sans-serif;
+	font-size: 11px;
+	font-weight: bold;
+	margin: 0px 8px;
+	padding: 0px 8px;
+
+}
+
+button:hover {
+	-moz-box-shadow: 1px 1px 1px rgba(68,68,68,0.6);
+	-webkit-box-shadow: 1px 1px 1px rgba(68,68,68,0.6);
+	-box-shadow: 1px 1px 1px rgba(68,68,68,0.6);
 }
 
 footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	background-color: #eee;
+	background-color: #f2f2f2;
 	line-height: 40px;
+	border-top: 1px solid #e4e4e4;
 }
 
+ul li a {
+	text-decoration: none;
+	color: #404040;
+	font-size: 13px;
+	font-family: arial, sans-serif;
+}
+
+a:hover {
+    text-decoration: underline;
+}
 
 
 /* Centering Central Elements
